welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: identifier expected but ')' found.
while (!estFaceMur:) {avance()} 
                   ^Program:3: error: ')' expected but '}' found.
	}
        ^